--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "bun run --hot src/server.js"
   },
   "dependencies": {
-    "hono": "^4.10.3",
-    "tencentcloud-sdk-nodejs-dnspod": "^4.1.115"
+    "hono": "^4.10.3"
   },
   "devDependencies": {}
 }
